<?xml version="1.0"?>
<package>
  <name>mjpegcanvas</name>
  <version>0.0.0</version>
  <description>The mjpegcanvas package</description>

  <maintainer email="garaemon@gmail.com">garaemon</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>