<?xml version="1.0"?>
<package>
  <name>rwt_ros</name>
  <version>0.0.0</version>
  <description>The rwt_ros meta package</description>

  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ros2djs</run_depend>
  <run_depend>ros3djs</run_depend>
  <run_depend>roslibjs</run_depend>
  <run_depend>mjpegserver</run_depend>
  <run_depend>roswww</run_depend>

  <export>
    <metapackage/>
  </export>
</package>